--- a/Currency_Exchange_Problem_Solution.ipynb
+++ b/Currency_Exchange_Problem_Solution.ipynb
@@ -3,10 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Currency Exchange Problem Solution",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNi2mubfE016JkVFQtdlqGE",
+      "authorship_tag": "ABX9TyOZHMVestpf1B/VjQjItcgD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +30,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7436c00b-b208-4d31-d892-fd2b94cc2c85"
+        "outputId": "966d9d03-f37e-4995-be40-a7017f393512"
       },
       "source": [
         "import numpy as np\n",
@@ -74,34 +72,101 @@
         "c_init = c_req[::-1]\n",
         " \n",
         "#Defining variables\n",
-        "X = cp.Variable(shape =(n,n))\n",
+        "X = cp.Variable((n,n))\n",
         " \n",
         "#Defining problem\n",
+        "\n",
+        "c_final = c_init - cp.sum(X, axis = 1) + cp.sum(X@np.reciprocal(F), axis = 1)\n",
+        "\n",
         "#Objective\n",
-        "#c_final = c_init - np.sum(X, axis = 1) + np.sum(X@np.reciprocal(F), axis = 1)\n",
-        "#c_init+X@(np.reciprocal(F))-np.transpose(X)@np.transpose((np.reciprocal(F)))\n",
-        "    \n",
-        "#objective = cp.Minimize((c_init-c_final)@(np.transpose(np.sqrt(F[:,0]@np.reciprocal(F[0,:])))))\n",
+        "curr_exchange_cost = (c_init-c_final)@(np.transpose(np.sqrt(F[:,0]*np.reciprocal(F[0,:]))))\n",
+        "objective = cp.Minimize(curr_exchange_cost)\n",
         " \n",
         "#Constraints\n",
-        "#constraints = [X>=0, diag(X)==0, np.sum(X, axis=0)<=c_init, c_final>=c_req]\n",
-        "#prob = cp.problem(objective, constraints)\n",
-        "#prob.solve()\n",
-        "print(\"c_init\", c_init.shape)\n",
-        "#print(\"c_final\", c_final.shape)\n",
-        "print(\"F\", F.shape)\n",
-        "#print(\"Optimal exchanges:\", X)\n",
+        "constraints = [X>=0, cp.diag(X)==0, cp.sum(X, axis=0)<=c_init]\n",
+        "# c_final>=c_req]\n",
+        "for i in range(n):\n",
+        "        constraints += [c_final[i] >= c_req[i]]\n",
+        "prob = cp.Problem(objective, constraints)\n",
+        "prob.solve()\n",
+        "print(\"Initial currency holdings c_init\", c_init)\n",
+        "print(\"Final currency holdings c_final\", c_final)\n",
+        "#print(\"F\", F.shape)\n",
+        "print(\"Optimal exchanges:\", X)\n",
         "#print(\"Exchange rates:\", F)\n",
-        "#print(\"Units of currencies after exchanges:\", c_final)"
+        "print(\"Units of currencies after exchanges:\", c_final)"
       ],
-      "execution_count": 1,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "c_init (10,)\n",
-            "F (10, 10)\n"
+            "Initial currency holdings c_init [1818.18181818 1636.36363636 1454.54545455 1272.72727273 1090.90909091\n",
+            "  909.09090909  727.27272727  545.45454545  363.63636364  181.81818182]\n",
+            "Final currency holdings c_final [1818.18181818 1636.36363636 1454.54545455 1272.72727273 1090.90909091\n",
+            "  909.09090909  727.27272727  545.45454545  363.63636364  181.81818182] + -Sum(var692, 1, False) + Sum(var692 @ [[1.00000000e+00 1.14942529e+00 1.31578947e+00 7.63358779e-01\n",
+            "  9.18273646e-03 1.48809524e-01 1.52788388e-02 5.23286238e-02\n",
+            "  1.40587656e-02 2.71002710e-01]\n",
+            " [8.40579710e-01 1.00000000e+00 1.13636364e+00 6.62251656e-01\n",
+            "  7.99041151e-03 1.29533679e-01 1.32925695e-02 4.55373406e-02\n",
+            "  1.22174710e-02 2.35849057e-01]\n",
+            " [7.34299517e-01 8.50241546e-01 1.00000000e+00 5.81395349e-01\n",
+            "  6.99594235e-03 1.13378685e-01 1.16414435e-02 3.98724083e-02\n",
+            "  1.06951872e-02 2.06611570e-01]\n",
+            " [1.26570048e+00 1.45893720e+00 1.66183575e+00 1.00000000e+00\n",
+            "  1.20583625e-02 1.95694716e-01 2.00722601e-02 6.87757909e-02\n",
+            "  1.84399779e-02 3.55871886e-01]\n",
+            " [1.05217391e+02 1.20917874e+02 1.38106280e+02 8.01256039e+01\n",
+            "  1.00000000e+00 1.61290323e+01 1.66666667e+00 5.55555556e+00\n",
+            "  1.53846154e+00 2.94117647e+01]\n",
+            " [6.49275362e+00 7.45893720e+00 8.52173913e+00 4.93719807e+00\n",
+            "  5.99033816e-02 1.00000000e+00 1.02669405e-01 3.50877193e-01\n",
+            "  9.42507069e-02 1.81818182e+00]\n",
+            " [6.32367150e+01 7.26859903e+01 8.29951691e+01 4.81352657e+01\n",
+            "  5.79710145e-01 9.41062802e+00 1.00000000e+00 3.44827586e+00\n",
+            "  9.17431193e-01 1.78571429e+01]\n",
+            " [1.84637681e+01 2.12173913e+01 2.42318841e+01 1.40483092e+01\n",
+            "  1.73913043e-01 2.75362319e+00 2.80193237e-01 1.00000000e+00\n",
+            "  2.68096515e-01 5.26315789e+00]\n",
+            " [6.87246377e+01 7.90821256e+01 9.03381643e+01 5.23961353e+01\n",
+            "  6.28019324e-01 1.02512077e+01 1.05314010e+00 3.60386473e+00\n",
+            "  1.00000000e+00 1.92307692e+01]\n",
+            " [3.56521739e+00 4.09661836e+00 4.67632850e+00 2.71497585e+00\n",
+            "  3.28502415e-02 5.31400966e-01 5.41062802e-02 1.83574879e-01\n",
+            "  5.02415459e-02 1.00000000e+00]], 1, False)\n",
+            "Optimal exchanges: var692\n",
+            "Units of currencies after exchanges: [1818.18181818 1636.36363636 1454.54545455 1272.72727273 1090.90909091\n",
+            "  909.09090909  727.27272727  545.45454545  363.63636364  181.81818182] + -Sum(var692, 1, False) + Sum(var692 @ [[1.00000000e+00 1.14942529e+00 1.31578947e+00 7.63358779e-01\n",
+            "  9.18273646e-03 1.48809524e-01 1.52788388e-02 5.23286238e-02\n",
+            "  1.40587656e-02 2.71002710e-01]\n",
+            " [8.40579710e-01 1.00000000e+00 1.13636364e+00 6.62251656e-01\n",
+            "  7.99041151e-03 1.29533679e-01 1.32925695e-02 4.55373406e-02\n",
+            "  1.22174710e-02 2.35849057e-01]\n",
+            " [7.34299517e-01 8.50241546e-01 1.00000000e+00 5.81395349e-01\n",
+            "  6.99594235e-03 1.13378685e-01 1.16414435e-02 3.98724083e-02\n",
+            "  1.06951872e-02 2.06611570e-01]\n",
+            " [1.26570048e+00 1.45893720e+00 1.66183575e+00 1.00000000e+00\n",
+            "  1.20583625e-02 1.95694716e-01 2.00722601e-02 6.87757909e-02\n",
+            "  1.84399779e-02 3.55871886e-01]\n",
+            " [1.05217391e+02 1.20917874e+02 1.38106280e+02 8.01256039e+01\n",
+            "  1.00000000e+00 1.61290323e+01 1.66666667e+00 5.55555556e+00\n",
+            "  1.53846154e+00 2.94117647e+01]\n",
+            " [6.49275362e+00 7.45893720e+00 8.52173913e+00 4.93719807e+00\n",
+            "  5.99033816e-02 1.00000000e+00 1.02669405e-01 3.50877193e-01\n",
+            "  9.42507069e-02 1.81818182e+00]\n",
+            " [6.32367150e+01 7.26859903e+01 8.29951691e+01 4.81352657e+01\n",
+            "  5.79710145e-01 9.41062802e+00 1.00000000e+00 3.44827586e+00\n",
+            "  9.17431193e-01 1.78571429e+01]\n",
+            " [1.84637681e+01 2.12173913e+01 2.42318841e+01 1.40483092e+01\n",
+            "  1.73913043e-01 2.75362319e+00 2.80193237e-01 1.00000000e+00\n",
+            "  2.68096515e-01 5.26315789e+00]\n",
+            " [6.87246377e+01 7.90821256e+01 9.03381643e+01 5.23961353e+01\n",
+            "  6.28019324e-01 1.02512077e+01 1.05314010e+00 3.60386473e+00\n",
+            "  1.00000000e+00 1.92307692e+01]\n",
+            " [3.56521739e+00 4.09661836e+00 4.67632850e+00 2.71497585e+00\n",
+            "  3.28502415e-02 5.31400966e-01 5.41062802e-02 1.83574879e-01\n",
+            "  5.02415459e-02 1.00000000e+00]], 1, False)\n"
           ]
         }
       ]
