--- a/Currency_Exchange_Problem_Solution.ipynb
+++ b/Currency_Exchange_Problem_Solution.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZHMVestpf1B/VjQjItcgD",
+      "authorship_tag": "ABX9TyMtSV3AC9Iri3kHlKvlE5iM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "966d9d03-f37e-4995-be40-a7017f393512"
+        "outputId": "67a92849-8d3e-4af2-8247-4ef03f5c7831"
       },
       "source": [
         "import numpy as np\n",
@@ -76,27 +76,27 @@
         " \n",
         "#Defining problem\n",
         "\n",
-        "c_final = c_init - cp.sum(X, axis = 1) + cp.sum(X@np.reciprocal(F), axis = 1)\n",
+        "c_final = c_init - cp.sum(cp.transpose(X@np.reciprocal(F)), axis = 1) + cp.sum(X@np.reciprocal(F), axis = 1)\n",
         "\n",
         "#Objective\n",
         "curr_exchange_cost = (c_init-c_final)@(np.transpose(np.sqrt(F[:,0]*np.reciprocal(F[0,:]))))\n",
         "objective = cp.Minimize(curr_exchange_cost)\n",
         " \n",
         "#Constraints\n",
-        "constraints = [X>=0, cp.diag(X)==0, cp.sum(X, axis=0)<=c_init]\n",
-        "# c_final>=c_req]\n",
-        "for i in range(n):\n",
-        "        constraints += [c_final[i] >= c_req[i]]\n",
+        "constraints = [X>=0, cp.diag(X)==0, cp.sum(X, axis=0)<=c_init, c_final>=c_req]\n",
+        "#for i in range(n):\n",
+        "#        constraints += [c_final[i] >= c_req[i]]\n",
         "prob = cp.Problem(objective, constraints)\n",
         "prob.solve()\n",
         "print(\"Initial currency holdings c_init\", c_init)\n",
-        "print(\"Final currency holdings c_final\", c_final)\n",
+        "print(\"Final currency holdings c_final\", c_final.value)\n",
         "#print(\"F\", F.shape)\n",
-        "print(\"Optimal exchanges:\", X)\n",
+        "print(\"Optimal exchanges:\", X.value)\n",
+        "print(\"Optimal cost of exchange:\", curr_exchange_cost.value)\n",
         "#print(\"Exchange rates:\", F)\n",
-        "print(\"Units of currencies after exchanges:\", c_final)"
+        "#print(\"Units of currencies after exchanges:\", c_final.value)"
       ],
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,69 +104,39 @@
           "text": [
             "Initial currency holdings c_init [1818.18181818 1636.36363636 1454.54545455 1272.72727273 1090.90909091\n",
             "  909.09090909  727.27272727  545.45454545  363.63636364  181.81818182]\n",
-            "Final currency holdings c_final [1818.18181818 1636.36363636 1454.54545455 1272.72727273 1090.90909091\n",
-            "  909.09090909  727.27272727  545.45454545  363.63636364  181.81818182] + -Sum(var692, 1, False) + Sum(var692 @ [[1.00000000e+00 1.14942529e+00 1.31578947e+00 7.63358779e-01\n",
-            "  9.18273646e-03 1.48809524e-01 1.52788388e-02 5.23286238e-02\n",
-            "  1.40587656e-02 2.71002710e-01]\n",
-            " [8.40579710e-01 1.00000000e+00 1.13636364e+00 6.62251656e-01\n",
-            "  7.99041151e-03 1.29533679e-01 1.32925695e-02 4.55373406e-02\n",
-            "  1.22174710e-02 2.35849057e-01]\n",
-            " [7.34299517e-01 8.50241546e-01 1.00000000e+00 5.81395349e-01\n",
-            "  6.99594235e-03 1.13378685e-01 1.16414435e-02 3.98724083e-02\n",
-            "  1.06951872e-02 2.06611570e-01]\n",
-            " [1.26570048e+00 1.45893720e+00 1.66183575e+00 1.00000000e+00\n",
-            "  1.20583625e-02 1.95694716e-01 2.00722601e-02 6.87757909e-02\n",
-            "  1.84399779e-02 3.55871886e-01]\n",
-            " [1.05217391e+02 1.20917874e+02 1.38106280e+02 8.01256039e+01\n",
-            "  1.00000000e+00 1.61290323e+01 1.66666667e+00 5.55555556e+00\n",
-            "  1.53846154e+00 2.94117647e+01]\n",
-            " [6.49275362e+00 7.45893720e+00 8.52173913e+00 4.93719807e+00\n",
-            "  5.99033816e-02 1.00000000e+00 1.02669405e-01 3.50877193e-01\n",
-            "  9.42507069e-02 1.81818182e+00]\n",
-            " [6.32367150e+01 7.26859903e+01 8.29951691e+01 4.81352657e+01\n",
-            "  5.79710145e-01 9.41062802e+00 1.00000000e+00 3.44827586e+00\n",
-            "  9.17431193e-01 1.78571429e+01]\n",
-            " [1.84637681e+01 2.12173913e+01 2.42318841e+01 1.40483092e+01\n",
-            "  1.73913043e-01 2.75362319e+00 2.80193237e-01 1.00000000e+00\n",
-            "  2.68096515e-01 5.26315789e+00]\n",
-            " [6.87246377e+01 7.90821256e+01 9.03381643e+01 5.23961353e+01\n",
-            "  6.28019324e-01 1.02512077e+01 1.05314010e+00 3.60386473e+00\n",
-            "  1.00000000e+00 1.92307692e+01]\n",
-            " [3.56521739e+00 4.09661836e+00 4.67632850e+00 2.71497585e+00\n",
-            "  3.28502415e-02 5.31400966e-01 5.41062802e-02 1.83574879e-01\n",
-            "  5.02415459e-02 1.00000000e+00]], 1, False)\n",
-            "Optimal exchanges: var692\n",
-            "Units of currencies after exchanges: [1818.18181818 1636.36363636 1454.54545455 1272.72727273 1090.90909091\n",
-            "  909.09090909  727.27272727  545.45454545  363.63636364  181.81818182] + -Sum(var692, 1, False) + Sum(var692 @ [[1.00000000e+00 1.14942529e+00 1.31578947e+00 7.63358779e-01\n",
-            "  9.18273646e-03 1.48809524e-01 1.52788388e-02 5.23286238e-02\n",
-            "  1.40587656e-02 2.71002710e-01]\n",
-            " [8.40579710e-01 1.00000000e+00 1.13636364e+00 6.62251656e-01\n",
-            "  7.99041151e-03 1.29533679e-01 1.32925695e-02 4.55373406e-02\n",
-            "  1.22174710e-02 2.35849057e-01]\n",
-            " [7.34299517e-01 8.50241546e-01 1.00000000e+00 5.81395349e-01\n",
-            "  6.99594235e-03 1.13378685e-01 1.16414435e-02 3.98724083e-02\n",
-            "  1.06951872e-02 2.06611570e-01]\n",
-            " [1.26570048e+00 1.45893720e+00 1.66183575e+00 1.00000000e+00\n",
-            "  1.20583625e-02 1.95694716e-01 2.00722601e-02 6.87757909e-02\n",
-            "  1.84399779e-02 3.55871886e-01]\n",
-            " [1.05217391e+02 1.20917874e+02 1.38106280e+02 8.01256039e+01\n",
-            "  1.00000000e+00 1.61290323e+01 1.66666667e+00 5.55555556e+00\n",
-            "  1.53846154e+00 2.94117647e+01]\n",
-            " [6.49275362e+00 7.45893720e+00 8.52173913e+00 4.93719807e+00\n",
-            "  5.99033816e-02 1.00000000e+00 1.02669405e-01 3.50877193e-01\n",
-            "  9.42507069e-02 1.81818182e+00]\n",
-            " [6.32367150e+01 7.26859903e+01 8.29951691e+01 4.81352657e+01\n",
-            "  5.79710145e-01 9.41062802e+00 1.00000000e+00 3.44827586e+00\n",
-            "  9.17431193e-01 1.78571429e+01]\n",
-            " [1.84637681e+01 2.12173913e+01 2.42318841e+01 1.40483092e+01\n",
-            "  1.73913043e-01 2.75362319e+00 2.80193237e-01 1.00000000e+00\n",
-            "  2.68096515e-01 5.26315789e+00]\n",
-            " [6.87246377e+01 7.90821256e+01 9.03381643e+01 5.23961353e+01\n",
-            "  6.28019324e-01 1.02512077e+01 1.05314010e+00 3.60386473e+00\n",
-            "  1.00000000e+00 1.92307692e+01]\n",
-            " [3.56521739e+00 4.09661836e+00 4.67632850e+00 2.71497585e+00\n",
-            "  3.28502415e-02 5.31400966e-01 5.41062802e-02 1.83574879e-01\n",
-            "  5.02415459e-02 1.00000000e+00]], 1, False)\n"
+            "Final currency holdings c_final [ 181.81818182  363.63636365  545.45454555  727.27272726  909.09090908\n",
+            " 1090.90909089 1272.72727271 1454.54545453 1636.36363635 1818.18181817]\n",
+            "Optimal exchanges: [[1.90364108e-12 2.19477594e+02 1.88067381e+02 1.73050468e+02\n",
+            "  2.06334878e+02 1.44149474e+02 1.36145203e+02 8.91570166e+01\n",
+            "  6.50908529e+01 2.13617580e+01]\n",
+            " [2.61131756e+02 1.99777408e-12 1.92092379e+02 1.77479071e+02\n",
+            "  2.41923334e+02 1.52917309e+02 1.55449256e+02 9.65338171e+01\n",
+            "  7.35054139e+01 2.19839895e+01]\n",
+            " [2.69902385e+02 2.32028285e+02 2.09412881e-12 1.83231340e+02\n",
+            "  2.81822573e+02 1.64094275e+02 1.74946487e+02 1.05392083e+02\n",
+            "  8.22525012e+01 2.41003091e+01]\n",
+            " [2.44031499e+02 2.12272290e+02 1.82685255e+02 1.76547296e-12\n",
+            "  1.52242954e+02 1.30438016e+02 1.05314958e+02 7.71698017e+01\n",
+            "  5.12063284e+01 2.09381327e+01]\n",
+            " [4.08394338e+01 4.75949576e+01 5.27750375e+01 3.31986561e+01\n",
+            "  2.79822240e-13 6.56235204e+00 6.22350560e-02 2.07831878e+00\n",
+            "  6.78552245e-01 7.27998463e+00]\n",
+            " [2.00853663e+02 1.81023395e+02 1.60258794e+02 1.39573141e+02\n",
+            "  2.05174225e+01 1.04969386e-12 2.16618812e+01 3.59504474e+01\n",
+            "  1.35698105e+01 2.02562747e+01]\n",
+            " [8.37228080e+01 8.81615976e+01 8.90332341e+01 6.38289333e+01\n",
+            "  9.86176280e-02 1.69160841e+01 3.37015454e-13 6.08715481e+00\n",
+            "  1.94543847e+00 1.24746701e+01]\n",
+            " [1.55079713e+02 1.47415129e+02 1.36305060e+02 1.11015074e+02\n",
+            "  4.63545565e+00 4.49113947e+01 7.41208055e+00 6.18157891e-13\n",
+            "  5.77221182e+00 1.79607507e+01]\n",
+            " [9.22781466e+01 9.54913317e+01 9.50588335e+01 6.93327181e+01\n",
+            "  6.03602857e-01 1.90829112e+01 2.07991005e+00 6.86606780e+00\n",
+            "  3.22532836e-13 1.32693890e+01]\n",
+            " [2.18348088e+02 1.93232417e+02 1.68729526e+02 1.50341849e+02\n",
+            "  4.59225614e+01 9.65350442e+01 3.96267556e+01 4.88580300e+01\n",
+            "  2.22539379e+01 1.33058545e-12]]\n",
+            "Optimal cost of exchange: 4213.117272372418\n"
           ]
         }
       ]
